@@ -7,7 +7,7 @@
           <tr>                              
             {foreach from=$tabs key=tabName item=tab}
               <td class="{$tabName} tabbedPaneTab {if $tab.selected}activetab{else}passivetab{/if}" valign="middle" align="left" nowrap="nowrap">	
-                <a href="javascript:void(0)" onclick="ATK.TabbedPane.showTab('{$paneName}', '{$tabName}')">{$tab.title}</a>
+                <a href="javascript:void(0)" onclick="ATK.TabbedPane.showTab('{$paneName}', '{$tabName}'); return false;">{$tab.title}</a>
               </td>          
               <td>&nbsp;</td>
             {/foreach}
