@@ -347,6 +347,9 @@ Changed in ATK 5.7
 + Added support for externaly setting the storage / load type of an 
   attribute. This makes it possible to use real attributes as dummies
   (no loading or saving) in add/edit forms. [Peter]
++ Added support for showing a warning message when leaving the
+  page without saving or cancelling. To enable this functionality
+  please set $config_lose_changes_warning to true. [Peter]
 * Changed function exportFile for IE7. If IE => inline to attachment [Koen]
 * Fixed atkSaveHandler rollback/commit behaviour. [Peter]
 * Fixed atkOci8Db/atkOci9Db rollback/commit behaviour. [Peter]
